将vue库放在本地，并确认了发布帖子时/posts POST操作的405错误（Method Not Allowed

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的BBS论坛</title>
     <link rel="stylesheet" href="index.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script src="../vue@2.js"></script>
 </head>
 
 <body>
