将提交按钮改为居中，并确认可以用npm run执行简化命令（npm run start 可以简写为npm start

--- a/static/index.html
+++ b/static/index.html
@@ -49,7 +49,7 @@
         <textarea id="postContent" v-model="newPostContent" placeholder="内容"></textarea><br>
         <label for="postAuthor">作者</label>
         <input type="text" id="postAuthor" v-model="newPostAuthor" placeholder="作者"><br>
-        <button @click="createPost">提交</button>
+        <button class="commit" @click="createPost">提交</button>
     </div>
 
     <script>
